# ClawDB

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: runtime_bench.rs
clawdb/: Cargo.toml  build.rs
clawdb-cli/: Cargo.toml
clawdb-cli/src/: cli.rs  client.rs  config.rs  error.rs  main.rs  output.rs  types.rs
clawdb-cli/src/commands/: branch.rs  completion.rs  config.rs  init.rs  mod.rs  policy.rs  recall.rs  reflect.rs  remember.rs  search.rs  session.rs  start.rs  status.rs  sync.rs
clawdb-cli/tests/: cli_tests.rs
clawdb-server/: Cargo.toml  build.rs
clawdb-server/proto/: clawdb.proto
clawdb-server/src/: lib.rs  main.rs  state.rs
clawdb-server/src/grpc/: mod.rs  service.rs
clawdb-server/src/http/: auth.rs  mod.rs  router.rs
clawdb-server/tests/: server_tests.rs
clawdb/benches/: runtime_bench.rs
clawdb/proto/: clawdb.proto
clawdb/src/: config.rs  engine.rs  error.rs  lib.rs  prelude.rs  types.rs
clawdb/src/api/: grpc_service.rs  mod.rs  reflect_client.rs
clawdb/src/api/grpc/: mod.rs  server.rs
clawdb/src/api/http/: mod.rs  routes.rs  server.rs
clawdb/src/events/: bus.rs  emitter.rs  mod.rs  subscriber.rs  types.rs
clawdb/src/lifecycle/: health.rs  manager.rs  mod.rs  shutdown.rs
clawdb/src/plugins/: events.rs  interface.rs  loader.rs  manager.rs  mod.rs  registry.rs  sandbox.rs  traits.rs
clawdb/src/query/: executor.rs  mod.rs  optimizer.rs  planner.rs  router.rs  types.rs
clawdb/src/session/: context.rs  manager.rs  mod.rs  store.rs
clawdb/src/telemetry/: metrics.rs  mod.rs  tracing_setup.rs
clawdb/src/transaction/: context.rs  coordinator.rs  log.rs  manager.rs  mod.rs
clawdb/tests/: engine_tests.rs
clawdb/tests/e2e/: integration.rs  properties.rs
clawdb/tests/grpc/: grpc_integration.rs
deploy/grafana/provisioning/dashboards/: clawdb-dashboard.json  dashboards.yml
deploy/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  PERFORMANCE.md  configuration.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
tests/e2e/: integration.rs
tests/grpc/: grpc_integration.rs
