[workspace]
members = [
    "clawdb",
    "clawdb-server",
    "clawdb-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt", "sync"] }
bytes = "1"
dashmap = "6"
arc-swap = "1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
backoff = { version = "0.4", features = ["tokio"] }
prometheus-client = "0.22"
axum = { version = "0.7", features = ["json", "matched-path", "tokio", "http1", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout"] }
libloading = "0.8"
governor = "0.10"
