[package]
name = "clawdb-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "ClawDB command-line interface"

[[bin]]
name = "clawdb-cli"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
clawdb = { path = "../clawdb" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dirs = "5"
toml = "0.8"
chrono.workspace = true
rustyline = "14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
