[package]
name = "clawdb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "The cognitive database for AI agents — unified memory, semantic retrieval, branching, sync, and governance."
documentation = "https://docs.rs/clawdb"
readme = "README.md"
keywords = ["database", "ai", "agents", "memory", "cognitive"]
categories = ["database", "asynchronous"]
exclude = ["target/", "benches/", ".github/"]

[lib]
name = "clawdb"
path = "src/lib.rs"

[[bin]]
name = "clawdb"
path = "src/bin/clawdb.rs"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
bytes.workspace = true
dashmap.workspace = true
arc-swap.workspace = true
futures.workspace = true
tokio-stream.workspace = true
backoff.workspace = true
prometheus-client.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
libloading.workspace = true
claw-core.workspace = true
claw-vector.workspace = true
claw-sync.workspace = true
claw-branch.workspace = true
claw-guard.workspace = true
claw-reflect-client.workspace = true

clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
toml = "0.8"
notify = "6"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
cfg-if = "1"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
rstest = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

[[bench]]
name = "runtime_bench"
harness = false
